--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             App.connectIcon = 'el-icon-success'
             App.connectDisable = false
             App.connectStatus = ''
-            App.connectTips = 'Stop Access Server'
+            App.connectTips = 'Disconnect From Access Server'
 
           }else if(msg.event == 'stoped'){
             App.$message({message: "Access server stopped",type: 'warning',customClass:'alert'});
