set about help font size 12px

--- a/static/about.html
+++ b/static/about.html
@@ -8,16 +8,16 @@
 </head>
 
 <body oncontextmenu="return false" style="overflow: hidden;">
-    <div style="padding: 10px;">
+    <div style="padding: 10px;font-size: 14px;">
         <p>
-            PoleVPN is a tool that helps enterprises to realize the following three functions with individual users:
+            <span style="font-weight: bold;">PoleVPN is a tool that helps enterprises to realize the following three functions with individual users:</span>
         <ul>
             <li>Help companies realize the point-to-point connection of two LANs in different regions</li>
             <li>Help employees of the company to remotely access company resources</li>
             <li>Protect users' online privacy through PoleVPN technology</li>
         </ul>
 
-        Why we are trustworthy:
+        <span style="font-weight: bold;"> Why we are trustworthy:</span>
         <ul>
             <li>The entire data connection adopts TLS encryption technology to protect your data from being stolen and
                 tampered during transmission</li>
