--- a/static/help.html
+++ b/static/help.html
@@ -8,16 +8,16 @@
 </head>
 
 <body oncontextmenu="return false" style="overflow: hidden;">
-    <div style="padding: 10px;">
+    <div style="padding: 10px;font-size: 14px;">
 
-        What should I do when I can’t connect?
+        <span style="font-weight: bold;">What should I do when I can’t connect?</span>
         <ul>
             <li>Check if the network is normal</li>
             <li>Check whether the filled Access Server information is correct</li>
             <li>Ask the network administrator for assistance</li>
             <li>Go to the PoleVPN website and report the problem</li>
         </ul>
-        Advantages of PoleVPN over OpenVPN
+        <span style="font-weight: bold;">Advantages of PoleVPN over OpenVPN</span>
         <ul>
             <li>Easy to install, configure and maintain</li>
             <li>It can easily break through network blockades and firewalls</li>
